[gd_scene load_steps=3 format=3 uid="uid://d2xfab6qe251q"]

[ext_resource type="Script" path="res://addons/jammin_lobby/Lobby/Player.gd" id="1_0tahl"]

[sub_resource type="SceneReplicationConfig" id="SceneReplicationConfig_j24fc"]
properties/0/path = NodePath(".:name")
properties/0/spawn = true
properties/0/replication_mode = 2
properties/1/path = NodePath(".:is_ready")
properties/1/spawn = true
properties/1/replication_mode = 2
properties/2/path = NodePath(".:username")
properties/2/spawn = true
properties/2/replication_mode = 2

[node name="Player" type="Node"]
script = ExtResource("1_0tahl")

[node name="PlayerSync" type="MultiplayerSynchronizer" parent="."]
replication_config = SubResource("SceneReplicationConfig_j24fc")
public_visibility = false

[connection signal="delta_synchronized" from="PlayerSync" to="." method="_on_delta_synchronized"]
[connection signal="visibility_changed" from="PlayerSync" to="." method="_on_player_sync_visibility_changed"]
